--- a/app/android/TicTacToe/AndroidManifest.xml
+++ b/app/android/TicTacToe/AndroidManifest.xml
@@ -5,12 +5,13 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="17" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        android:theme="@android:style/Theme.NoTitleBar"
+        android:allowBackup="false" >
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
