--- a/app/android/TicTacToe/AndroidManifest.xml
+++ b/app/android/TicTacToe/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:allowBackup="false" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
